TL-22867 filter_mediaplugin: Fixed alignment issues with videos in glossaries

--- a/filter/mediaplugin/styles.css
+++ b/filter/mediaplugin/styles.css
@@ -10,8 +10,6 @@
 
 .mediaplugin,
 .mediaplugin video {
-    /* Make videos as wide as possible without being wider than their containers */
-    width: 100vw;
     max-width: 100%;
     height: auto;
 }
